--- a/nsm.nuspec
+++ b/nsm.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>nsm</id>
-    <version>1.2</version>
+    <version>1.3</version>
     <packageSourceUrl>https://github.com/nifty-site-manager/nsm-chocolatey</packageSourceUrl>
     <owners>Nick Ham</owners>
 
@@ -36,8 +36,8 @@
     </description>
     <summary>dynamic and static site generator</summary>
     <releaseNotes>
-      * Version 1.2 of Nift
-      * removed output for successful building of pages (significant improvement in build time for 10,000 pages)
+      * Version 1.3 of Nift
+      * added multithreading when building all pages (significant improvement in build time for 10,000 pages)
     </releaseNotes>
 	
     <!-- =============================== -->      
