--- a/nsm.nuspec
+++ b/nsm.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>nsm</id>
-    <version>1.4</version>
+    <version>1.5</version>
     <packageSourceUrl>https://github.com/nifty-site-manager/nsm-chocolatey</packageSourceUrl>
     <owners>Nick Ham</owners>
 
@@ -36,8 +36,8 @@
     </description>
     <summary>dynamic and static site generator</summary>
     <releaseNotes>
-      * Version 1.4 of Nift
-      * added -O3 compiler optimisation (significant improvement in build time for 10,000 pages)
+      * Version 1.5 of Nift
+      * added -O3 added serve command to serve pages locally
     </releaseNotes>
 	
     <!-- =============================== -->      
