--- a/nsm.nuspec
+++ b/nsm.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>nsm</id>
-    <version>1.8</version>
+    <version>1.9</version>
     <packageSourceUrl>https://github.com/nifty-site-manager/nsm-chocolatey</packageSourceUrl>
     <owners>Nick Ham</owners>
 
@@ -36,8 +36,8 @@
     </description>
     <summary>dynamic and static site generator</summary>
     <releaseNotes>
-      * Version 1.8 of Nift
-      * improved multithreading support
+      * Version 1.9 of Nift
+      * added in timer for build/build-updated/build-all commands
     </releaseNotes>
 	
     <!-- =============================== -->      
