--- a/nsm.nuspec
+++ b/nsm.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>nsm</id>
-    <version>1.12</version>
+    <version>1.13</version>
     <packageSourceUrl>https://github.com/nifty-site-manager/nsm-chocolatey</packageSourceUrl>
     <owners>Nick Ham</owners>
 
@@ -36,9 +36,9 @@
     </description>
     <summary>dynamic and static site generator</summary>
     <releaseNotes>
-      * Version 1.12 of Nift
-      * fixed some bugs under the hood
-      * made some improvements under the hood
+      * Version 1.13 of Nift
+      * added in user-defined dependency support
+      * changed the way pre blocks are parsed
     </releaseNotes>
 	
     <!-- =============================== -->      
