Nift (aka nsm) v1.15 - added non-default page extension support and added @dep syntax to Nift's template language

--- a/nsm.nuspec
+++ b/nsm.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>nsm</id>
-    <version>1.14</version>
+    <version>1.15</version>
     <packageSourceUrl>https://github.com/nifty-site-manager/nsm-chocolatey</packageSourceUrl>
     <owners>Nick Ham</owners>
 
@@ -36,8 +36,9 @@
     </description>
     <summary>dynamic and static site generator</summary>
     <releaseNotes>
-      * Version 1.14 of Nift
-      * improved multithreading
+      * Version 1.15 of Nift
+      * added non-default page extension support
+      * added @dep syntax to the template language
     </releaseNotes>
 	
     <!-- =============================== -->      
