Nift (aka nsm) v1.17 - changed std::endl to n when writing to file, changed pages set to pointer in PageBuilder.h, added/improved Nift commands new-template, new-site-dir, new-cont-dir, new-cont-ext, new-page-ext, added @systemcontent(sys-call) syntax to template language, fixed bug with @System, @systemoutput, @script, @scriptoutput syntax

--- a/nsm.nuspec
+++ b/nsm.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>nsm</id>
-    <version>1.16</version>
+    <version>1.17</version>
     <packageSourceUrl>https://github.com/nifty-site-manager/nsm-chocolatey</packageSourceUrl>
     <owners>Nick Ham</owners>
 
@@ -36,11 +36,12 @@
     </description>
     <summary>dynamic and static site generator</summary>
     <releaseNotes>
-      * Version 1.16 of Nift
-      * improved multithreading
-      * added @inputhead syntax to the template language
-      * fixed read_sys_call and read_path
-      * improved new-page-ext
+      * Version 1.17 of Nift
+      * changed std::endl to "\n" when writing to file, 20% improvement in build-all time on some machines, no improvement on others
+      * changed pages set to pointer in PageBuilder.h, significantly less memory consumption
+      * added/improved Nift commands new-template, new-site-dir, new-cont-dir, new-cont-ext, new-page-ext
+      * added @systemcontent(sys-call) syntax to template language
+      * fixed bug with @system, @systemoutput, @script, @scriptoutput syntax
     </releaseNotes>
 	
     <!-- =============================== -->      
