Nift (aka nsm) v1.18 - added FileSystem.[h/cpp] to the project, added cpDir function to FileSystem.[h/cpp], renamed trash to ret_val and handle more errors, fixed numerous minor bugs

--- a/nift.nuspec
+++ b/nift.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>nift</id>
-    <version>1.17</version>
+    <version>1.18</version>
     <packageSourceUrl>https://github.com/nifty-site-manager/nsm-chocolatey-nift</packageSourceUrl>
     <owners>Nick Ham</owners>
 
@@ -36,12 +36,11 @@
     </description>
     <summary>dynamic and static site generator</summary>
     <releaseNotes>
-      * Version 1.17 of Nift
-      * changed std::endl to "\n" when writing to file, 20% improvement in build-all time on some machines, no improvement on others
-      * changed pages set to pointer in PageBuilder.h, significantly less memory consumption
-      * added/improved Nift commands new-template, new-site-dir, new-cont-dir, new-cont-ext, new-page-ext
-      * added @systemcontent(sys-call) syntax to template language
-      * fixed bug with @system, @systemoutput, @script, @scriptoutput syntax
+      * Version 1.18 of Nift
+      * added FileSystem.[h/cpp] to the project
+      * added cpDir function to FileSystem.[h/cpp]
+      * renamed trash to ret_val and handle more errors
+      * fixed numerous minor bugs
     </releaseNotes>
 	
     <!-- =============================== -->      
