--- a/nift.nuspec
+++ b/nift.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>nift</id>
-    <version>1.22</version>
+    <version>1.23</version>
     <packageSourceUrl>https://github.com/nifty-site-manager/nsm-chocolatey-nift</packageSourceUrl>
     <owners>Nick Ham</owners>
 
@@ -36,17 +36,19 @@
     </description>
     <summary>dynamic and static site generator</summary>
     <releaseNotes>
-      * Version 1.22 of Nift
-      * added in scriptExt to config files, better way to do pre/post build/serve scripts
-      * added command `new-script-ext (page-name) scriptExt`
-      * changed/improved how pre/post build/serve scripts are done
-      * hopefully fixed bugs with @script, @scriptoutput, @scriptraw functions
-      * added optional parameter string parameter to @script, @scriptoutput, @scriptraw functions
-      * updated Nift info commands with additional page information
-      * added pageinfo syntax @pagecontentext, @pagepageext, @pagescriptext to template language
-      * added siteinfo syntax @scriptext to template language
-      * added in buildThreads to config files
-      * added command `no-build-thrds (no-threads)`
+      * Version 1.23 of Nift
+      * fixed Windows bugs and tidied up with pre/post build/serve scripts and @script, @scriptoutput, @scriptraw
+      * fixed indenting inside pre blocks with methods to input from file
+      * added allowing quoted string variable names with whitespace and open brackets
+      * improved filenames for temporary files
+      * added syntax @\n to template language
+      * added in syntax for Nift comments to template language:
+          - (raw multi line comment)             &lt;@-- .. --@>   
+          - (parsed multi line comment)          @/*  .. @*/
+          - (parsed special multi line comment)  @--- .. @---
+          - (raw single line comment)            @#
+          - (parsed single line comment)         @//
+          - (parsed special single line comment) @!\n
     </releaseNotes>
 	
     <!-- =============================== -->      
