--- a/nift.nuspec
+++ b/nift.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>nift</id>
-    <version>1.23</version>
+    <version>1.24</version>
     <packageSourceUrl>https://github.com/nifty-site-manager/nsm-chocolatey-nift</packageSourceUrl>
     <owners>Nick Ham</owners>
 
@@ -36,19 +36,15 @@
     </description>
     <summary>dynamic and static site generator</summary>
     <releaseNotes>
-      * Version 1.23 of Nift
-      * fixed Windows bugs and tidied up with pre/post build/serve scripts and @script, @scriptoutput, @scriptraw
-      * fixed indenting inside pre blocks with methods to input from file
-      * added allowing quoted string variable names with whitespace and open brackets
-      * improved filenames for temporary files
-      * added syntax @\n to template language
-      * added in syntax for Nift comments to template language:
-          - (raw multi line comment)             &lt;@-- .. --@>   
-          - (parsed multi line comment)          @/*  .. @*/
-          - (parsed special multi line comment)  @--- .. @---
-          - (raw single line comment)            @#
-          - (parsed single line comment)         @//
-          - (parsed special single line comment) @!\n
+      * Version 1.24 of Nift
+      * fixed bugs with content/page/script extensions and mv/cp/rm aka move/copy/del
+      * updated/moved removePath to remove_path and remove_file and now removes now-empty directories
+      * added in ^ option for @script syntax in template language for not making a backup copy
+      * added in backupScripts to config files
+      * added Nift commands track-dir, untrack-dir, rm-dir, track-from-file, untrack-from-file, rm-from-file (note when removing large volumes of pages using rm-from-file can cause significant machine lags while running and not long after)
+      * added Nift commands watch, unwatch, info-watching
+      * got rid of pre/post build-all and build-updated scripts, costs too much time and not really needed
+      * added pre/post build scripts to page dependencies
     </releaseNotes>
 	
     <!-- =============================== -->      
